--- a/sampleStore/composer.json
+++ b/sampleStore/composer.json
@@ -15,7 +15,8 @@
         "laracasts/flash": "^3.1",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "spatie/laravel-sluggable": "^2.4"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
