--- a/sampleStore/composer.json
+++ b/sampleStore/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "pagseguro/pagseguro-php-sdk": "^6.0",
         "spatie/laravel-sluggable": "^2.4"
     },
     "require-dev": {
